implement l7 compress
